@@ -1,3 +1,7 @@
+2003-08-18  Jan Nieuwenhuizen  <janneke@gnu.org>
+
+	* site/devel/packaging.html: Update.
+
 2003-08-18  Han-Wen Nienhuys  <hanwen@cs.uu.nl>
 
 	* site/index.html (different): ms manners iso. miss manners
